--- a/views/modals/users/users.add.html
+++ b/views/modals/users/users.add.html
@@ -20,6 +20,26 @@
                         <label for="password">Password</label>
                         <input id="password" class="form-control" type="password" name="password" placeholder="Enter user password ..." required>
                     </div>
+                    <div class="form-group">
+                        <label for="email">E-mail Address</label>
+                        <input id="email" class="form-control" type="email" name="email" placeholder="Enter user's name ..." required>
+                    </div>
+                    <div class="form-group">
+                        <label for="status">Status</label>
+                        <select id="status" name="status" class="custom-select" required>
+                            <option disabled selected>Choose status for this user ...</option>
+                            <option value="Yes">Yes</option>
+                            <option value="No">No</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label for="role">Role</label>
+                        <select id="role" name="role" class="custom-select" required>
+                            <option disabled selected>Choose the role for this user ...</option>
+                            <option value="Technician">Technician</option>
+                            <option value="Administrator">Administrator</option>
+                        </select>
+                    </div>
                     <input type="submit" class="form-control btn btn-primary" value="Create">
                 </form>
             </div>
