--- a/views/modals/users/users.add.html
+++ b/views/modals/users/users.add.html
@@ -25,7 +25,7 @@
                         <input id="email" class="form-control" type="email" name="email" placeholder="Enter user's name ..." required>
                     </div>
                     <div class="form-group">
-                        <label for="status">Status</label>
+                        <label for="status">Activated</label>
                         <select id="status" name="status" class="custom-select" required>
                             <option disabled selected>Choose status for this user ...</option>
                             <option value="Yes">Yes</option>
