Remove required property for each form.

--- a/views/modals/customers/customers.edit.html
+++ b/views/modals/customers/customers.edit.html
@@ -11,15 +11,15 @@
                 <form method="POST" action="/customers?request=edit">
                     <div class="form-group">
                         <label for="editCustomerName">Customer Name</label>
-                        <input id="editCustomerName" class="form-control" type="text" name="customer_name" required>
+                        <input id="editCustomerName" class="form-control" type="text" name="customer_name">
                     </div>
                     <div class="form-group">
                         <label for="editSalesName">Sales Name</label>
-                        <input id="editSalesName" class="form-control" type="text" name="sales_name" required>
+                        <input id="editSalesName" class="form-control" type="text" name="sales_name">
                     </div>
                     <div class="form-group">
                         <label for="editSegmentation">Segmentation</label>
-                        <input id="editSegmentation" class="form-control" type="text" name="segmentation" required>
+                        <input id="editSegmentation" class="form-control" type="text" name="segmentation">
                     </div>
 
                     <input id="editCustomerId" type="hidden" name="customer_id">
@@ -28,7 +28,8 @@
             </div>
 
             <div class="modal-footer">
-                <button type="button" class="btn btn-danger" data-dismiss="modal"><i class="fas fa-ban"></i> Close</button>
+                <button type="button" class="btn btn-danger" data-dismiss="modal"><i class="fas fa-ban"></i>
+                    Close</button>
             </div>
         </div>
     </div>
