Successfully add new feature for access rights

--- a/views/layout/sidenav.html
+++ b/views/layout/sidenav.html
@@ -16,6 +16,11 @@
                     <i class="fas fa-laptop m-3"></i> CID
                 </a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link text-secondary" href="access_rights">
+                    <i class="fas fa-key m-3"></i> Access Rights
+                </a>
+            </li>
             @if($admin)
             <li class="nav-item">
                 <a class="nav-link text-secondary" href="/users">
