--- a/views/modals/customers/customers.view.html
+++ b/views/modals/customers/customers.view.html
@@ -6,36 +6,61 @@
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
             </div>
             <div class="modal-body">
-                <table class="table">
-                    <tr>
-                        <td>
-                            Customer Name
-                        </td>
-                        <td>
-                            <input id="viewCustomerName" type="text" class="form-control" disabled>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            Sales Name
-                        </td>
-                        <td>
-                            <input id="viewSalesName" type="text" class="form-control" disabled>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            Segmentation
-                        </td>
-                        <td>
-                            <input id="viewSegmentation" type="text" class="form-control" disabled>
-                        </td>
-                    </tr>
-                </table>
+                <ul class="nav nav-tabs" role="tablist">
+                    <li class="nav-item">
+                        <a id="viewCustomerLink" class="nav-link active" data-toggle="tab" href="#viewCustomer">Customer
+                            Data</a>
+                    </li>
+                    <li class="nav-item">
+                        <a id="viewAccessRightsLink" class="nav-link" data-toggle="tab" href="#viewAccessRights">Access
+                            Rights</a>
+                    </li>
+                </ul>
+                <div class="tab-content">
+                    <!-- View customer data -->
+                    <div id="viewCustomer" class="container tab-pane active">
+                        <table class="table">
+                            <tr>
+                                <td>
+                                    Customer Name
+                                </td>
+                                <td>
+                                    <input id="viewCustomerName" type="text" class="form-control" disabled>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    Sales Name
+                                </td>
+                                <td>
+                                    <input id="viewSalesName" type="text" class="form-control" disabled>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    Segmentation
+                                </td>
+                                <td>
+                                    <input id="viewSegmentation" type="text" class="form-control" disabled>
+                                </td>
+                            </tr>
+                        </table>
+                        <input id="viewId" type="hidden">
+                    </div>
+
+                    <!-- View access rights data -->
+                    <div id="viewAccessRights" class="contaier tab-pane fade">
+                        <div id="accessRightsTable"></div>
+                        @if($admin)
+                        <a id="accessRightsAddLink" class="btn btn-primary text-white"><i class="fas fa-plus"></i> Add</a>
+                        @endif
+                    </div>
+                </div>
             </div>
 
             <div class="modal-footer">
-                <button type="button" class="btn btn-danger" data-dismiss="modal"><i class="fas fa-ban"></i> Close</button>
+                <button type="button" class="btn btn-danger" data-dismiss="modal"><i class="fas fa-ban"></i>
+                    Close</button>
             </div>
         </div>
     </div>
