Add new side navigation item for VLAN management.

--- a/views/layout/sidenav.html
+++ b/views/layout/sidenav.html
@@ -17,8 +17,13 @@
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link text-secondary" href="access_rights">
+                <a class="nav-link text-secondary" href="/access_rights">
                     <i class="fas fa-key m-3"></i> Access Rights
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link text-secondary" href="/vlan">
+                    <i class="fas fa-ethernet m-3"></i> VLAN
                 </a>
             </li>
             @if($admin)
