VLAN management on progress. Todo: finish this section.

--- a/views/layout/sidenav.html
+++ b/views/layout/sidenav.html
@@ -7,6 +7,11 @@
                 </a>
             </li>
             <li class="nav-item">
+                <a class="nav-link text-secondary" href="/dashboard">
+                    <i class="fas fa-tachometer-alt m-3"></i> Dashboard
+                </a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link text-secondary" href="/customers">
                     <i class="fas fa-file-contract m-3"></i> Customers
                 </a>
