--- a/views/modals/networking/vlangroup/vlangroup.add.html
+++ b/views/modals/networking/vlangroup/vlangroup.add.html
@@ -10,6 +10,7 @@
                 <form method="POST" action="/vlan?request=add">
                     <div class="form-group">
                         <label for="name">Name</label>
+                        <span class="bg-warning">(<strong>Warning:</strong> <i>whitespace is not allowed!</i>)</span>
                         <input id="name" class="form-control" type="text" name="name"
                             placeholder="Enter the VLAN Group's name ..." required>
                     </div>
