Add new router for dashboard.

--- a/views/layout/sidenav.html
+++ b/views/layout/sidenav.html
@@ -13,7 +13,7 @@
             </li>
             <li class="nav-item">
                 <a class="nav-link text-secondary" href="/customers">
-                    <i class="fas fa-file-contract m-3"></i> Customers
+                    <i class="fas fa-file-contract m-3"></i> &nbsp;Customers
                 </a>
             </li>
             <li class="nav-item">
