Fix chart size on dashboard.

--- a/views/modals/networking/vlangroup/vlangroup.add.html
+++ b/views/modals/networking/vlangroup/vlangroup.add.html
@@ -9,8 +9,7 @@
             <div class="modal-body">
                 <form method="POST" action="/vlan?request=add">
                     <div class="form-group">
-                        <label for="name">Name</label>
-                        <span class="bg-warning">(<strong>Warning:</strong> <i>whitespace is not allowed!</i>)</span>
+                        <label for="name">Name (<b class="text-warning">*</b>)</label>
                         <input id="name" class="form-control" type="text" name="name"
                             placeholder="Enter the VLAN Group's name ..." required>
                     </div>
