Update edit button value.

--- a/views/modals/networking/vlangroup/vlangroup.edit.html
+++ b/views/modals/networking/vlangroup/vlangroup.edit.html
@@ -16,7 +16,7 @@
                         <input id="vlanGroupSiteEdit" class="form-control" type="text" name="site">
                     </div>
                     <input id="vlanGroupIdEdit" type="hidden" name="id">
-                    <input type="submit" class="form-control btn btn-primary" value="Create">
+                    <input type="submit" class="form-control btn btn-primary" value="Save">
                 </form>
             </div>
             <div class="modal-footer">
