--- a/views/modals/networking/vlansite/vlan.add.html
+++ b/views/modals/networking/vlansite/vlan.add.html
@@ -1,4 +1,4 @@
-<div id="addModal" class="modal">
+<div id="addVlanModal" class="modal">
     <div class="modal-dialog modal-dialog-centered modal-xl">
         <div class="modal-content">
             <div class="modal-header">
