--- a/views/layout/footer.html
+++ b/views/layout/footer.html
@@ -1,5 +1,5 @@
 <footer class="mt-auto bg-light text-center">
-    <div class="container my-3">
+    <div class="container-fluid my-3">
         <p class="float-left">
             <span class="btn btn-light text-secondary">&copy; <a class="text-secondary" href="http://gtt-madamtbs.my.id/" target="__blank">gtt-madamtbs.my.id</a> - 2020</span>
         </p>
