Now user can export the Access Rights data to Excel format. Todo: Make function for exporting to PDF format. Also we restricted non-admin user to add or remove the vlan data.

--- a/views/modals/customers/customers.view.html
+++ b/views/modals/customers/customers.view.html
@@ -54,6 +54,8 @@
                         @if($admin)
                         <a id="accessRightsAddLink" class="btn btn-primary text-white"><i class="fas fa-plus"></i> Add</a>
                         @endif
+                        <a id="exportToExcel" class="btn btn-success"><i class="fas fa-file-export"></i> Export to Excel</a>
+                        <a id="exportToPdf" class="btn btn-danger"><i class="fas fa-file-export"></i> Export to PDF</a>
                     </div>
                 </div>
             </div>
