fix: e-mail form placeholder typo.

--- a/views/modals/users/users.add.html
+++ b/views/modals/users/users.add.html
@@ -22,7 +22,7 @@
                     </div>
                     <div class="form-group">
                         <label for="email">E-mail Address</label>
-                        <input id="email" class="form-control" type="email" name="email" placeholder="Enter user's name ..." required>
+                        <input id="email" class="form-control" type="email" name="email" placeholder="Enter e-mail address ..." required>
                     </div>
                     <div class="form-group">
                         <label for="status">Activated</label>
